# heb_interview

./: README.md  api.Dockerfile  docker-compose.yaml  pyproject.toml  testing_imagga_api.ipynb
alembic/: env.py
alembic/versions/: a9c5b0061a17_generate_tables.py  c1dfb8fb6760_added_content_type_and_download_url_to_.py  fc5ee0979713_initial_setup.py
api/: config.py  db_interface.py  imagga_client.py  main.py  models.py  s3_client.py  schemas.py
src/: serve.sh
src/alembic/: env.py
src/alembic/versions/: c1dfb8fb6760_added_content_type_and_download_url_to_.py  fc5ee0979713_initial_setup.py
src/api/: config.py  database.py  db_interface.py  imagga_client.py  main.py  s3_client.py  schemas.py
